# OpenClinXR

./: .env.openclinxr.local.example  .gitignore  .lsp.json  .npmrc  AGENTS.md  AUTONOMOUS_WORK_PLAN.md  LICENSE  PROJECT_COORDINATION_INDEX.md  PROJECT_STATUS.md  README.md  biome.json  blender-bake-temporary-note.md  cellixjs-feedback.md  godot-usage-posture-temporary.md  godot-usage-temporary-note.md  knip.json  operator-open-questions.md  operator-steering-needed-questions.md  operator-suggestion-backlog.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proposal-iwsdk-phase2-devtools.md  proposal-iwsdk-phase2-sharp-libvips-exception.md  proposal-iwsdk-sidecar-install.md  proposal-local-model-benchmark.md  proposal-local-realtime-voice-model-inference.md  proposal-local-voice-runtime.md  proposal-quest-foreground-performance-capture.md  proposal-quic-web3-protocol-posture.md  proposal-webxr-mixed-reality-mode.md  pyrightconfig.json  skills-lock.json  tsconfig.archunit.json  tsconfig.base.json  tsconfig.ide.json  tsconfig.json  turbo.json
.agent-factory/: benchmark-gate-report.json  evidence-debt-report.json  godot-project-import-check.json  maturity-report.json  memory-index.json  quest-cdp-smoke-check.json  quest-http3-compatibility-check.json  (+5 more)
apps/arena/api-python-backend/: README.md  package.json  pyproject.toml  turbo.json
apps/arena/api-python-backend/scripts/: install_local_voice_models.py  local_voice_candidates.py  test_local_voice_evidence.py
apps/arena/api-python-backend/src/api_python_backend/: __init__.py  main.py
docs/: CNAME  (+2 more)
(+1978 files in other folders)
