[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclinxr-api-python-backend"
version = "0.1.0"
description = "Minimal FastAPI backend skeleton for a realtime voice AI spike."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "websockets>=12,<16",
]

[project.optional-dependencies]
# Planning notes only: local voice/model experiments may evaluate MLX, Moshi, or Qwen
# bindings later, but this spike intentionally installs nothing for those stacks.
mlx-moshi-qwen-notes = []

[tool.hatch.build.targets.wheel]
packages = ["src/api_python_backend"]
